2008-09-09  Olaf Kirch <okir@suse.de>

	* src/secscanf.c: New file providing sec_sscanf with an additional 
	size argument for string arguments. All format specifiers should work
	as in the standard scanf - except for those writing to a string
	buffer provided by the caller. These specifiers take an additional
	argument of type size_t that specifies the size of the buffer.

	* src/ps.c: Replace all calls (with %s) to sscanf by sec_sscanf.
	
2008-09-09  Dr. Werner Fink <werner@suse.de>

	* src/Ghostview.c: Under some circimstances add "-dDELAYSAFER"
	to the commandline of gs.
	
	* src/misc.c (set_new_orientation): Handle the case Widget w is
	not initialized.
	
	* src/misc.c (set_new_pagemedia): likewise
	
	* src/musc.c (set_pagemediaButton_label): likewise
	
	* src/ps.c: Add include <sys/types.h>

2008-09-08  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/ps.c (psscan): Code cleanup: Use dup to use a new 
	guaranteed free non-arbitrary number, use open instead of 
	fopen & fileno.

2008-09-02  Bernhard R. Link <brlink@debian.org>

	* src/GhostviewP.h: Changed type of bytes_left from int to gv_off_t.

2008-09-02  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/Ghostview.c, src/Ghostview.h, src/GhostviewP.h, src/callbacks.c,
	src/file.c, src/misc.c, src/ps.c, src/ps.h, src/zoom.c:
	Large File Support (LFS) - removed variant that was enabled by the
	macros HAVE_LFS64.

	* configure.ac, src/Makefile.am: likewise
	
	* src/versionp.h: Updated release month
	
2008-09-01  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/Ghostview.c, src/Ghostview.h, src/GhostviewP.h, src/callbacks.c,
	src/file.c, src/misc.c, src/ps.c, src/ps.h, src/zoom.c:
	Large File Support (LFS) - it has to be enabled by the preprocessor
	macros HAVE_LFS64 resp. HAVE_OFF_T.

	* configure.ac, src/Makefile.am: Support setting the macros
	HAVE_LFS64 resp. HAVE_OFF_T.
	
2008-08-30  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/ps.c (ps_io_ftell): Changed return type to long
	