@@ -1,3 +1,10 @@
+2008-09-09  Dr. Werner Fink <werner@suse.de>
+
+	* configure.ac: Check if the ZIO Library is available.
+
+	* src/ps.c (psscan): Use the ZIO Library to decompress a file
+	if the ZIO Library is presemt.
+
 2008-09-09  Olaf Kirch <okir@suse.de>
 
 	* src/secscanf.c: New file providing sec_sscanf with an additional 
